add upvote cucumber test